# info_shield

./: .gitignore  README.md  flow.mmd  pyproject.toml  run.py  watermarks_ci.json
info_shield/: __init__.py  cli.py  config.py  model.py  redactor.py  registry.py  rule_type.py  scanner.py  scanner_new.py  validators_unused.py
info_shield/api/: app.py
info_shield/gui/: app.py
info_shield/keywords/: builtin_packs.py  registry.py
info_shield/nlp/: engine.py  jailbreak_rules.py  registry.py  spacy_rules.py
info_shield/patterns/: builtin_exact.py  builtin_financial.py  builtin_network.py  builtin_pii.py  builtin_safety.py  builtin_secrets.py  global_id_patterns.py  registry.py
info_shield/patterns/composite/: registry.py  (+1 more)
info_shield/preprocess/: base.py  builtins.py  registry.py
info_shield/validators/: aadhaar_validator.py  base.py  builtin.py  cpf_validator.py  email_domain_allowlist.py  hetu_validator.py  iban_validator.py  jwt_validator.py  luhn_validator.py  password_entropy.py  registry.py
tests/: conftest.py  test_composites.py  test_exact_watermarks.py  test_jailbreak.py  test_keywords.py  test_nlp_rules.py  test_patterns_basic.py  test_redactor.py  test_scanner_end_to_end.py
tests/postman-collections/: InfoShield.local_environment.json  InfoShield.local_likelyhood.json  InfoShield.postman_collection.json  InfoShield.postman_collection_composite.json  global_patterns_collection.postman_collection.json
tests/test_patterns/: test_global_id_patterns.py
tests/test_validators/: test_aadhaar.py  test_cpf.py  test_hetu.py  test_iban.py  test_jwt.py
